quote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quote
  template:
    metadata:
      labels:
        app: quote
    spec:
      containers:
      - name: quote
        image: ahmedessam404/quotes_app-web:2.0.0
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP 
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
