my-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  selector:
    app: db
  clusterIP: None
  ports:
  - port: 5432
