quote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote
spec:
  selector:
    app: quote
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP 
    name: http
