ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quote-ingress
  labels:
    name: quote
spec:
  ingressClassName: nginx 
  rules:
  - host: quote.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: quote
            port: 
              number: 3000
